[gd_scene load_steps=16 format=2]

[ext_resource path="res://interface/ResourceCostList.gd" type="Script" id=1]
[ext_resource path="res://assets/interfaces/loading-screen/prof-desc-bgd-border.png" type="Texture" id=2]
[ext_resource path="res://assets/interfaces/loading-screen/prof-desc-bgd.png" type="Texture" id=3]
[ext_resource path="res://fonts/roboto_24.tres" type="DynamicFontData" id=4]
[ext_resource path="res://assets/interfaces/bar-chunk-icon.png" type="Texture" id=5]
[ext_resource path="res://assets/interfaces/command-input/ripost.png" type="Texture" id=6]
[ext_resource path="res://assets/interfaces/command-input/counter-ripost.png" type="Texture" id=7]
[ext_resource path="res://assets/interfaces/command-input/l2.png" type="Texture" id=8]
[ext_resource path="res://assets/interfaces/command-input/AUTO-RIPOST.png" type="Texture" id=9]
[ext_resource path="res://assets/interfaces/command-input/b-or-f-dash.png" type="Texture" id=10]
[ext_resource path="res://assets/interfaces/command-input/A.png" type="Texture" id=11]

[sub_resource type="DynamicFont" id=1]
size = 30
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 30
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
size = 30
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=4]
size = 30
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[node name="ResourceCostList" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Node2D" type="Node2D" parent="."]
position = Vector2( 0, 88 )

[node name="bgd2" type="Control" parent="Node2D"]
margin_top = -88.0
margin_right = 40.0
margin_bottom = -48.0

[node name="TextureRect2" type="TextureRect" parent="Node2D/bgd2"]
margin_left = -35.0
margin_right = 169.0
margin_bottom = 204.0
rect_scale = Vector2( 3.8, 2.2 )
texture = ExtResource( 2 )

[node name="TextureRect" type="TextureRect" parent="Node2D/bgd2"]
modulate = Color( 0.113725, 0.733333, 1, 1 )
margin_left = -23.936
margin_top = 76.9264
margin_right = 146.064
margin_bottom = 246.926
rect_scale = Vector2( 4.4, 2 )
texture = ExtResource( 3 )

[node name="title" type="Label" parent="."]
margin_left = 10.2078
margin_top = 26.0565
margin_right = 562.208
margin_bottom = 79.0565
custom_fonts/font = SubResource( 1 )
text = "Commands involving ability bar "

[node name="GridContainer" type="GridContainer" parent="."]
margin_top = 88.0
margin_right = 1164.0
margin_bottom = 479.0
rect_scale = Vector2( 0.8, 0.8 )
columns = 3

[node name="r1-c1" type="Label" parent="GridContainer"]
margin_right = 424.0
margin_bottom = 36.0
rect_min_size = Vector2( 315, 0 )
custom_fonts/font = SubResource( 2 )
text = "Command"

[node name="r1-c2" type="Label" parent="GridContainer"]
margin_left = 428.0
margin_right = 703.0
margin_bottom = 36.0
rect_min_size = Vector2( 225, 0 )
custom_fonts/font = SubResource( 2 )
text = "Name"

[node name="r1-c3" type="TextureRect" parent="GridContainer/r1-c2"]
margin_left = 186.5
margin_top = -1.99999
margin_right = 269.5
margin_bottom = 38.0
texture = ExtResource( 5 )

[node name="HBoxContainer" type="HBoxContainer" parent="GridContainer"]
margin_left = 707.0
margin_right = 1161.0
margin_bottom = 36.0

[node name="r1-c4" type="Label" parent="GridContainer/HBoxContainer"]
margin_right = 62.0
margin_bottom = 36.0
custom_fonts/font = SubResource( 2 )
text = "Cost"

[node name="r1-c5" type="Label" parent="GridContainer/HBoxContainer"]
margin_left = 66.0
margin_right = 316.0
margin_bottom = 36.0
rect_min_size = Vector2( 250, 0 )
custom_fonts/font = SubResource( 2 )
text = " (Mod)"

[node name="ripostTexture" type="TextureRect" parent="GridContainer"]
margin_top = 40.0
margin_right = 424.0
margin_bottom = 76.0
texture = ExtResource( 6 )
stretch_mode = 4

[node name="ripostName" type="Label" parent="GridContainer"]
margin_left = 428.0
margin_top = 40.0
margin_right = 703.0
margin_bottom = 76.0
rect_min_size = Vector2( 250, 0 )
custom_fonts/font = SubResource( 2 )
text = "Ripost"

[node name="HBoxContainer2" type="HBoxContainer" parent="GridContainer"]
margin_left = 707.0
margin_top = 40.0
margin_right = 1161.0
margin_bottom = 76.0

[node name="ripostCost" type="Label" parent="GridContainer/HBoxContainer2"]
margin_right = 50.0
margin_bottom = 36.0
rect_min_size = Vector2( 50, 0 )
custom_fonts/font = SubResource( 2 )
text = "?"

[node name="ripostMod" type="Label" parent="GridContainer/HBoxContainer2"]
margin_left = 54.0
margin_right = 454.0
margin_bottom = 36.0
rect_min_size = Vector2( 400, 0 )
custom_fonts/font = SubResource( 2 )
text = "?"

[node name="counterRipostTexture" type="TextureRect" parent="GridContainer"]
margin_top = 80.0
margin_right = 424.0
margin_bottom = 116.0
texture = ExtResource( 7 )
stretch_mode = 4

[node name="counterRipostName" type="Label" parent="GridContainer"]
margin_left = 428.0
margin_top = 80.0
margin_right = 703.0
margin_bottom = 116.0
rect_min_size = Vector2( 250, 0 )
custom_fonts/font = SubResource( 2 )
text = "Counter Ripost"

[node name="HBoxContainer3" type="HBoxContainer" parent="GridContainer"]
margin_left = 707.0
margin_top = 80.0
margin_right = 1161.0
margin_bottom = 116.0

[node name="counterRipostCost" type="Label" parent="GridContainer/HBoxContainer3"]
margin_right = 50.0
margin_bottom = 36.0
rect_min_size = Vector2( 50, 0 )
custom_fonts/font = SubResource( 2 )
text = "?"

[node name="counterRipostMod" type="Label" parent="GridContainer/HBoxContainer3"]
margin_left = 54.0
margin_right = 454.0
margin_bottom = 36.0
rect_min_size = Vector2( 400, 0 )
custom_fonts/font = SubResource( 2 )
text = "?"

[node name="pushBlockTexturePane" type="HBoxContainer" parent="GridContainer"]
margin_top = 120.0
margin_right = 424.0
margin_bottom = 156.0

[node name="pushBlocktexture" type="TextureRect" parent="GridContainer/pushBlockTexturePane"]
margin_right = 85.0
margin_bottom = 36.0
texture = ExtResource( 8 )

[node name="r1-c4" type="Label" parent="GridContainer/pushBlockTexturePane"]
margin_left = 89.0
margin_right = 339.0
margin_bottom = 36.0
rect_min_size = Vector2( 250, 0 )
custom_fonts/font = SubResource( 2 )
text = " while blocking"

[node name="pushBlockName" type="Label" parent="GridContainer"]
margin_left = 428.0
margin_top = 120.0
margin_right = 703.0
margin_bottom = 156.0
rect_min_size = Vector2( 250, 0 )
custom_fonts/font = SubResource( 2 )
text = "Push Block"

[node name="HBoxContainer4" type="HBoxContainer" parent="GridContainer"]
margin_left = 707.0
margin_top = 120.0
margin_right = 1161.0
margin_bottom = 156.0

[node name="pushBlockCost" type="Label" parent="GridContainer/HBoxContainer4"]
margin_right = 50.0
margin_bottom = 36.0
rect_min_size = Vector2( 50, 0 )
custom_fonts/font = SubResource( 2 )
text = "?"

[node name="pushBlockMod" type="Label" parent="GridContainer/HBoxContainer4"]
margin_left = 54.0
margin_right = 454.0
margin_bottom = 36.0
rect_min_size = Vector2( 400, 0 )
custom_fonts/font = SubResource( 2 )
text = "?"

[node name="autoRipostTexture" type="TextureRect" parent="GridContainer"]
margin_top = 160.0
margin_right = 424.0
margin_bottom = 196.0
texture = ExtResource( 9 )
stretch_mode = 4

[node name="autoRipostName" type="Label" parent="GridContainer"]
margin_left = 428.0
margin_top = 160.0
margin_right = 703.0
margin_bottom = 196.0
rect_min_size = Vector2( 250, 0 )
custom_fonts/font = SubResource( 2 )
text = "Auto Ripost"

[node name="HBoxContainer5" type="HBoxContainer" parent="GridContainer"]
margin_left = 707.0
margin_top = 160.0
margin_right = 1161.0
margin_bottom = 196.0

[node name="autoRipostCost" type="Label" parent="GridContainer/HBoxContainer5"]
margin_right = 50.0
margin_bottom = 36.0
rect_min_size = Vector2( 50, 0 )
custom_fonts/font = SubResource( 2 )
text = "?"

[node name="autoRipostMod" type="Label" parent="GridContainer/HBoxContainer5"]
margin_left = 54.0
margin_right = 454.0
margin_bottom = 36.0
rect_min_size = Vector2( 400, 0 )
custom_fonts/font = SubResource( 2 )
text = "?"

[node name="autoAbilityPane" type="HBoxContainer" parent="GridContainer"]
margin_top = 200.0
margin_right = 424.0
margin_bottom = 275.0

[node name="autoAbilityDashTexture" type="TextureRect" parent="GridContainer/autoAbilityPane"]
margin_right = 85.0
margin_bottom = 75.0
texture = ExtResource( 10 )
stretch_mode = 4

[node name="or" type="Label" parent="GridContainer/autoAbilityPane"]
margin_left = 89.0
margin_top = 19.0
margin_right = 124.0
margin_bottom = 55.0
custom_fonts/font = SubResource( 2 )
text = " or"

[node name="autoAbilityJumpTexture" type="TextureRect" parent="GridContainer/autoAbilityPane"]
margin_left = 128.0
margin_right = 213.0
margin_bottom = 75.0
texture = ExtResource( 11 )
stretch_mode = 4

[node name="r1-c4" type="Label" parent="GridContainer/autoAbilityPane"]
margin_left = 217.0
margin_top = 19.0
margin_right = 367.0
margin_bottom = 55.0
rect_min_size = Vector2( 150, 0 )
custom_fonts/font = SubResource( 2 )
text = " on hit"

[node name="autoAbilityCancelName" type="Label" parent="GridContainer"]
margin_left = 428.0
margin_top = 200.0
margin_right = 703.0
margin_bottom = 275.0
rect_min_size = Vector2( 275, 0 )
custom_fonts/font = SubResource( 2 )
text = "Auto Ability Cancel
(base cost)"

[node name="HBoxContainer6" type="HBoxContainer" parent="GridContainer"]
margin_left = 707.0
margin_top = 200.0
margin_right = 1161.0
margin_bottom = 275.0

[node name="autoAbilityCancelCost" type="Label" parent="GridContainer/HBoxContainer6"]
margin_top = 19.0
margin_right = 50.0
margin_bottom = 55.0
rect_min_size = Vector2( 50, 0 )
custom_fonts/font = SubResource( 2 )
text = "?"

[node name="autoAbilityCancelMod" type="Label" parent="GridContainer/HBoxContainer6"]
margin_left = 54.0
margin_top = 19.0
margin_right = 454.0
margin_bottom = 55.0
rect_min_size = Vector2( 400, 0 )
custom_fonts/font = SubResource( 2 )
text = "?"

[node name="techPane" type="HBoxContainer" parent="GridContainer"]
margin_top = 279.0
margin_right = 424.0
margin_bottom = 315.0

[node name="techTexture" type="TextureRect" parent="GridContainer/techPane"]
margin_right = 85.0
margin_bottom = 36.0
texture = ExtResource( 8 )

[node name="r1-c4" type="Label" parent="GridContainer/techPane"]
margin_left = 89.0
margin_right = 424.0
margin_bottom = 36.0
rect_min_size = Vector2( 335, 0 )
custom_fonts/font = SubResource( 2 )
text = " on bounce (in hitstun)"

[node name="techName" type="Label" parent="GridContainer"]
margin_left = 428.0
margin_top = 279.0
margin_right = 703.0
margin_bottom = 315.0
rect_min_size = Vector2( 250, 0 )
custom_fonts/font = SubResource( 2 )
text = "Tech"

[node name="HBoxContainer7" type="HBoxContainer" parent="GridContainer"]
margin_left = 707.0
margin_top = 279.0
margin_right = 1161.0
margin_bottom = 315.0

[node name="techCost" type="Label" parent="GridContainer/HBoxContainer7"]
margin_right = 50.0
margin_bottom = 36.0
rect_min_size = Vector2( 50, 0 )
custom_fonts/font = SubResource( 2 )
text = "?"

[node name="techMod" type="Label" parent="GridContainer/HBoxContainer7"]
margin_left = 54.0
margin_right = 454.0
margin_bottom = 36.0
rect_min_size = Vector2( 400, 0 )
custom_fonts/font = SubResource( 2 )
text = "?"

[node name="techTexture2" type="TextureRect" parent="GridContainer"]
margin_top = 319.0
margin_right = 424.0
margin_bottom = 394.0
texture = ExtResource( 8 )
stretch_mode = 4

[node name="abilityCancelName" type="Label" parent="GridContainer"]
margin_left = 428.0
margin_top = 319.0
margin_right = 703.0
margin_bottom = 394.0
rect_min_size = Vector2( 250, 0 )
custom_fonts/font = SubResource( 2 )
text = "Ability Cancel
(base cost)"

[node name="HBoxContainer8" type="HBoxContainer" parent="GridContainer"]
margin_left = 707.0
margin_top = 319.0
margin_right = 1161.0
margin_bottom = 394.0

[node name="abilityCancelCost" type="Label" parent="GridContainer/HBoxContainer8"]
margin_top = 19.0
margin_right = 50.0
margin_bottom = 55.0
rect_min_size = Vector2( 50, 0 )
custom_fonts/font = SubResource( 2 )
text = "?"

[node name="abilityCancelMod" type="Label" parent="GridContainer/HBoxContainer8"]
margin_left = 54.0
margin_top = 19.0
margin_right = 454.0
margin_bottom = 55.0
rect_min_size = Vector2( 400, 0 )
custom_fonts/font = SubResource( 2 )
text = "?"

[node name="negativeModTemplate" type="Label" parent="."]
visible = false
margin_left = 20.0422
margin_top = 440.688
margin_right = 451.042
margin_bottom = 476.688
rect_min_size = Vector2( 400, 0 )
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.901961, 0, 0, 1 )
text = "?"

[node name="positiveModTemplate" type="Label" parent="."]
visible = false
margin_left = 48.4353
margin_top = 442.348
margin_right = 479.435
margin_bottom = 478.348
rect_min_size = Vector2( 400, 0 )
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.117647, 0.780392, 0.0196078, 1 )
text = "?"

[node name="neutralModTemplate" type="Label" parent="."]
visible = false
margin_left = 81.4353
margin_top = 442.348
margin_right = 512.435
margin_bottom = 478.348
rect_min_size = Vector2( 400, 0 )
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 1, 0.843137, 0, 1 )
text = "?"
